--- a/cv/yellow_cv.tex
+++ b/cv/yellow_cv.tex
@@ -24,7 +24,7 @@
 % Contact the maintainer at: me (at) olivierpieters (dot) be.
 
 
-\documentclass[a4paper,hidelinks]{blue_template}
+\documentclass[a4paper,hidelinks]{yellow_template}
 
   % Define Font
   \usepackage[sfdefault,condensed]{roboto}
@@ -117,32 +117,26 @@
       \cvItem{\textbf{Data Scientist}\\
               \textsc{Socialpoint}, Barcelona. February 2018 -- July 2018\\
               \vspace{1mm}
-              From the beginning of experience with this videogame company, I focused on developing data pipelines and models using R. Among other things, I managed to
               \begin{itemize}
-              	\item Create and present models for time series forecasting.
-              	\item Apply A/B testing and decision tree analysis to identify causes for lower-than-usual retention.
-              	\item Create automatic dashboards that tracked many models' accuracies in a daily basis.
-              	\item Conduct thorough exploratory analysis identifying patterns and seeking useful features for Machine Learning models.
-              	\item Automate and beatifully wrap up all of the above in pretty R Shiny Apps for more straightforward use for management departments.
+              	\item Created and presented models for time series forecasting.
+              	\item Applied A/B testing and decision tree analysis to identify causes for lower-than-usual retention.
+              	\item Created automatic dashboards that tracked many models' accuracies in a daily basis.
+              	\item Conducted thorough exploratory analysis identifying patterns and seeking useful features for Machine Learning models.
+              	\item All of the above was automated and beatifully wrapped up in pretty R Shiny Apps for more straightforward use.
               \end{itemize}};
       \cvItem{\textbf{Risk Analyst}\\
               \textsc{Caixa d'Enginyers}, Barcelona. February 2017 -- July 2017\\
                             \vspace{1mm}
-              In this experience in banking industry, I finally had the opportunity to my math and coding skills both in R and VBA in real-world situations. During my time in this company, I managed to:
+              In this experience in banking industry, I finally had the opportunity to my math and coding skills in real-world situations. During my time in this company, I managed to:
               \begin{itemize}
               	\item Apply mathematical methods in assessing risk indicators.
               	\item Handle large databases with limited computational resources.
-              	\item Implement automatic scripts in order to deliver periodic risk reports faster and more accurately on tight deadlines.
+              	\item Implement automatic scripts in order to deliver periodic reports faster and more accurately on tight deadlines.
               \end{itemize}};
        \cvItem{\textbf{Research Assistant}\\
               \textsc{CSIC}, Barcelona. February 2016 -- September 2016\\
                             \vspace{1mm}
-Participation in the 'CONECTA' campaing, a research project focused in the study of the evolution of little crustaceans grub in the Mediterranean Sea.
-\begin{itemize}
-\item I developed the code - in Python - to establsih data pipelines that simulated the dynamic processes of oceanic internal waves and analyzed the resulted data.
-\item I helped in routine duties of data extraction, both computationally and hands-on in the boat, handling the machinery that measured the data in-time on the sea.
-\end{itemize}
-Working with such unbelievable professionals helped me to understand the importance of being detail-oriented and rigorous with your projects.};
+Participation in the 'CONECTA' campaing, a research project focused in the study of the evolution of little crustaceans grub in the Mediterranean Sea. I have also helped in the developement of simulation models involving the dynamic processes of internal waves over continental slopes. \\ Working with such unbelievable professionals helped me to understand the importance of being detail-oriented and rigorous with your projects. Furthermore, working in my own project told me how to pull the chestnuts out of the fire by myself in many situations; developing the tough skill of getting things done.};
     \end{cvExperience}
 
     % \begin{cvReferences}
