--- a/cv/alcv.tex
+++ b/cv/alcv.tex
@@ -43,14 +43,16 @@
   \begin{cvSidebar}
     \cvID{Alejandro}{Jiménez Rico}{}{Data Scientist}
 
-    \begin{cvProfile}
-      Physicist forging a new path through Data Science.
-    \end{cvProfile}
+    % \begin{cvProfile}
+    %   Hooligan of tidy coding. \\
+
+    %  “Programs must be written for people to read, and only incidentally for machines to execute.”
+    % \end{cvProfile}
 
     \begin{cvContact}
       \cvContactAddress{London}
       \cvContactEmail{mailto:aljrico@gmail.com}{aljrico@gmail.com}
-      \cvContactPhone{+34 664 146 397}
+      \cvContactPhone{077 319 100 80}
       \cvContactWebsite{https://aljrico.github.io}{aljrico.github.io}
       \cvContactLinkedin{https://www.linkedin.com/in/aljrico/}{linkedin.com/in/aljrico}
       % \cvContactTwitter{https://twitter.com/johndoe}{@johndoe}
@@ -70,6 +72,7 @@
       \cvInterest{\faBarChart}{Data Analysis}
       \cvInterest{\faCode}{Machine Learning}
       \cvInterest{\faCloud}{Big Data}
+      \cvInterest{\faGamepad}{Free to Play Gaming}
       \cvInterest{\faLineChart}{Quantitative Finance}
 
       % \vspace{4mm}
@@ -93,8 +96,6 @@
   \begin{cvMainContent}
 
     \begin{cvEducation}
-      \cvItem{\textbf{PhD in Actuarial Mathematics}\\
-      Cass Business School, London. 2018 -- Present\\}
       \cvItem{\textbf{Master of Science in Data Science \& Mathematical Modelling}\\
       Universitat Autònoma de Barcelona, Barcelona. 2017 -- 2018\\}
       \cvItem{\textbf{Master of Science in Financial Mathematics}\\
@@ -105,44 +106,60 @@
 
     \begin{cvSkills}
       \cvSkillTwo{5}{R}{4}{\LaTeX}
-      \cvSkillTwo{4}{SQL}{3}{Python}
-      \cvSkillTwo{4}{VBA}{3}{Spark}
-      \cvSkillOne{3}{C, C++}
+      \cvSkillTwo{5}{SQL}{4}{Python}
+      \cvSkillTwo{4}{VBA}{3}{C++}
+      % \cvSkillTwo{3}{C}{4}{Spark}
     \end{cvSkills}
 
     \begin{cvExperience}
-      \cvItem{\textbf{PhD Researcher}\\
-              \textsc{\selectfont Cass Business School}, London. March 2018 -- Present\\
+          \cvItem{\textbf{Data Scientist \& Product Manager}\\
+              \textsc{\selectfont Supersolid}, London. January 2019 --  PRESENT\\
+                            \vspace{1mm}
+              I was responsible of leading the shift to a more data-driven Product Management, focusing in the content creation of live free-to-play games. Some of my achievements in this role include:
+              \begin{itemize}
+              	\item Conducting and analysing many A/B tests, using parametric and non-parametric hypothesis testing.
+              	% \item Automating complex data-dependent processes for content creation and game balancing. This helped to dramatically reduce the workload for every release, and eliminate most human-error caused bugs.
+              	\item Build time-series forecasting models, with both ARIMA models and Recurrent Neural Networks, used to assess the impact of new features.
+              	\item Constructing automatic data pipelines from Google Cloud through BigQuery.
+              	% \item Making interactive dashboards to keep track of relevant KPIs.
+              	\item Modelling and pricing optimisation for IAPs (In-app-purchases) and in-game items. This helped to improve daily revenue by 30\%
+              	\item Guide and supervise Junior Data Scientists
+              \end{itemize}};
+      \cvItem{\textbf{Research Scientist}\\
+              \textsc{\selectfont Cass Business School}, London. July 2018 -- January 2019\\
+                            \vspace{1mm}
+                            Took part in a research project aimed at optimising of long term investments such as savings and insurances.
+              \begin{itemize}
+              	\item Built highly efficient simulations with C++.
+              	\item Analyse and model the result of the simulations with R and Rcpp.
+              \end{itemize}
               };
       \cvItem{\textbf{Data Scientist}\\
               \textsc{Socialpoint}, Barcelona. February 2018 -- July 2018\\
               \vspace{1mm}
-              From the beginning of experience with this videogame company, I focused on developing data pipelines and models using R. Among other things, I managed to
+              From the beginning of experience with this videogame company, I focused on developing data pipelines and models using R. Among other things, I managed to:
               \begin{itemize}
-              	\item Create and present models for time series forecasting.
-              	\item Apply A/B testing and decision tree analysis to identify causes for lower-than-usual retention.
-              	\item Create automatic dashboards that tracked many models' accuracies in a daily basis.
-              	\item Conduct thorough exploratory analysis identifying patterns and seeking useful features for Machine Learning models.
-              	\item Automate and beatifully wrap up all of the above in pretty R Shiny Apps for more straightforward use for management departments.
+              	\item Create and present time series forecasting models to measure the impact of marketing campaigns.
+              	\item Analyse A/B tests results.
+              	\item Create automatic dashboards that tracked ML models' performance
+              	\item Conduct Exploratory Data Analysis to enrich for Machine Learning Models.
               \end{itemize}};
-      \cvItem{\textbf{Risk Analyst}\\
+      \cvItem{\textbf{Data Analyst / Risk Analyst}\\
               \textsc{Caixa d'Enginyers}, Barcelona. February 2017 -- July 2017\\
                             \vspace{1mm}
-              In this experience in banking industry, I finally had the opportunity to my math and coding skills both in R and VBA in real-world situations. During my time in this company, I managed to:
+                            During my time in this company, I managed to:
               \begin{itemize}
-              	\item Apply mathematical methods in assessing risk indicators.
-              	\item Handle large databases with limited computational resources.
-              	\item Implement automatic scripts in order to deliver periodic risk reports faster and more accurately on tight deadlines.
+              	\item Apply mathematical methods in assessing risk indicators, using R.
+              	\item Handle complex datasets with limited computational resources, using R.
+              	\item Automate - using VBA - the delivery periodic risk reports faster and more accurately on tight deadlines.
               \end{itemize}};
-       \cvItem{\textbf{Research Assistant}\\
+       \cvItem{\textbf{Data Analyst / Research Assistant}\\
               \textsc{CSIC}, Barcelona. February 2016 -- September 2016\\
                             \vspace{1mm}
 Participation in the 'CONECTA' campaing, a research project focused in the study of the evolution of little crustaceans grub in the Mediterranean Sea.
 \begin{itemize}
-\item I developed the code - in Python - to establsih data pipelines that simulated the dynamic processes of oceanic internal waves and analyzed the resulted data.
-\item I helped in routine duties of data extraction, both computationally and hands-on in the boat, handling the machinery that measured the data in-time on the sea.
-\end{itemize}
-Working with such unbelievable professionals helped me to understand the importance of being detail-oriented and rigorous with your projects.};
+\item Developed Python code to simulate fluid dynamics equations
+\end{itemize}};
     \end{cvExperience}
 
     % \begin{cvReferences}
