--- a/cv/pinacv.tex
+++ b/cv/pinacv.tex
@@ -56,9 +56,9 @@
     \end{cvProfile}
 
     \begin{cvContact}
-      \cvContactAddress{London}
+      \cvContactAddress{Gifford Street, Islington - London}
       \cvContactEmail{mailto:mnk.grau@gmail.com}{mnk.grau@gmail.com}
-      \cvContactPhone{+34 675 395 954}
+      \cvContactPhone{07749 040776}
       % \cvContactWebsite{https://aljrico.github.io}{aljrico.github.io}
       % \cvContactLinkedin{https://www.linkedin.com/in/aljrico/}{linkedin.com/in/aljrico}
       % \cvContactTwitter{https://twitter.com/johndoe}{@johndoe}
@@ -105,25 +105,13 @@
       \cvItem{\textbf{Veterinary Surgeon}\\
               \textsc{\selectfont Easipetcare}, Chatham (United Kingdom). September 2018 -- Present\\\vspace{1mm}
               Consultation duties and diagnosis of cat, dog and small mammals.\\
-               Basic surgery and anaesthesia procedures on my own:
-              \begin{itemize}
-              	\item Castration and Spay.
-              	\item Removing of small Lumps or Tumours.
-              	\item Otohematomas and Absceces.
-              	\item Dental procedures.
-              \end{itemize}
+               Routine surgery and anaesthesia procedures carried on my own.
               };
       \cvItem{\textbf{Veterinary Surgeon}\\
               \textsc{Kiwet}, Barcelona (Spain). April 2017 -- August 2018\\
               \vspace{1mm}
               Consultation duties and diagnosis of cat, dog and small mammals.\\
-               Basic surgery and anaesthesia procedures on my own:
-              \begin{itemize}
-              	\item Castration and Spay.
-              	\item Removing of small Lumps or Tumours.
-              	\item Otohematomas and Absceces.
-              	\item Dental procedures.
-              \end{itemize}};
+               Basic routine surgery and anaesthesia procedures carried on my own.};
       \cvItem{\textbf{Emergency Veterinarian \& Critical Care}\\
               \textsc{St. Antoni Abat Hospital}, Barcelona (Spain). October 2015 -- February 2017\\\vspace{1mm}
               \begin{itemize}
@@ -154,14 +142,13 @@
 
 
     \begin{cvSkills}
-      \cvSkillTwo{5}{R}{4}{\LaTeX}
-      \cvSkillTwo{4}{SQL}{3}{Python}
-      \cvSkillTwo{4}{VBA}{3}{Spark}
-      \cvSkillOne{3}{C, C++}
+      \cvSkillTwo{4}{Routine Surgery}{4}{Other Small Surgeries}
+      \cvSkillTwo{4}{Medical Work-up}{5}{Caseload Management}
+      \cvSkillTwo{3}{Image Diagnosis}{4}{10' Consultation}
+      \cvSkillOne{5}{Interpersonal Skills}
     \end{cvSkills}
 
     \begin{cvEducation}
-          \cvItem{\textbf{CPD}\\ 2015 -- Present\\}
       \cvItem{\textbf{Bachelor of Science in Veretinary Medicine}\\
       Universitat Autònoma de Barcelona, Barcelona. 2010 -- 2015\\}
     \end{cvEducation}
